[metadata]
name= fft
version = attr: fft.version.__version__
description = "FFT for all!"
url = "https://github.com/d-kicinski/fft"
author = "Dawid Kiciński"
author_email = "kicinski.dawid@gmail.com"
license = "MIT"

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires "==3.9"
install_requires =
    numpy
tests_require =
    pytest
    pytest-cov

[options.package_data]
tensor = *.so, *.pyi, py.typed

[options.packages.find]
where = src

[mypy]
python_version = 3.9
plugins = numpy.typing.mypy_plugin
